Update markdowlint configuration

--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -15,5 +15,5 @@ jobs:
 
     - uses: DavidAnson/markdownlint-cli2-action@v19
       with:
-        config: .markdownlint.json
-        globs: '**/*.md'
+        config: .markdownlint-cli2.yaml
+        globs: 'pages'
