--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "docusaurus-lunr-search": "^3.6.0",
     "prism-react-renderer": "2.4.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
