--- a/.github/workflows/check_dead_links.yml
+++ b/.github/workflows/check_dead_links.yml
@@ -17,4 +17,4 @@ jobs:
         python-version: '3.x'
     - run: pip install python-frontmatter
     - name: Check for dead links
-      run: tests/dead_links.py
+      run: scripts/dead_links.py
