--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.7.x",
+    "@docusaurus/faster": "3.7.x",
     "@docusaurus/plugin-client-redirects": "3.7.x",
     "@docusaurus/preset-classic": "3.7.x",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
