--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,13 @@ jobs:
       - name: list
         run: ls -lah
 
-      - name: install tools
-        run: sudo apt install sshpass rsync
+      - name: Install tools
+        run: |
+          sudo apt install sshpass rsync
+          mkdir .ssh;             chmod 700 .ssh
+          touch .ssh/known_hosts  chmod 600 .ssh/known_hosts
+          ssh-keyscan nextdoc.yunohost.org >> .ssh/known_hosts
+
 
       - name: Deploy
         run: sshpass -p ${{ secrets.DOC_SFTP_PWD }} rsync -avz --delete docs/ my_webapp@nextdoc.yunohost.org:~/www/
