--- a/docs/03.admin/_category_.yaml
+++ b/docs/03.admin/_category_.yaml
@@ -2,4 +2,5 @@ label: Administration guide
 link:
   type: generated-index
   title: Administration guide
+  slug: admin
   description: Learn about self-hosting, how to install and use YunoHost
