Build for next in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn
 
       - name: Build docs
-        run: yarn build
+        run: NEXT=yes yarn build
 
       - name: Archive the docs
         uses: actions/upload-artifact@v4
