Fix github workflow duplicate deploy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
 
-    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/next' }}
+    if: ${{github.event_name == 'push' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/heads/next' ) }}
     env:
       APP: ${{ github.ref == 'refs/heads/main' && 'my_webapp' || 'my_webapp__4' }}
 
