--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
@@ -30,6 +32,9 @@ jobs:
           cache: yarn
       - name: Installation
         run: yarn
+
+      - name: Check translations pages consistency
+        run: python3 ./scripts/check_i18n_consistency.py
 
       - name: Build docs
         run: yarn build
