--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check image paths consistency
-        run: scripts/check_missing_or_bad_image_path.sh
+        run: bash scripts/check_missing_or_bad_image_path.sh
 
       - name: Set up Python
         uses: actions/setup-python@v5
