--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "~3.8.1",
-    "@docusaurus/faster": "~3.8.1",
-    "@docusaurus/plugin-client-redirects": "~3.8.1",
-    "@docusaurus/preset-classic": "~3.8.1",
+    "@docusaurus/core": "~3.9.0",
+    "@docusaurus/faster": "~3.9.0",
+    "@docusaurus/plugin-client-redirects": "~3.9.0",
+    "@docusaurus/preset-classic": "~3.9.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -33,8 +33,8 @@
     "react-player": "^2.16.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.8.1",
-    "@docusaurus/types": "^3.8.1"
+    "@docusaurus/module-type-aliases": "~3.9.0",
+    "@docusaurus/types": "~3.9.0"
   },
   "browserslist": {
     "production": [
