--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -6,13 +6,13 @@ on:
 
 permissions:
   contents: read
-  pages: write
-  id-token: write
-  pull-requests: write
 
 concurrency:
-  group: pr-${{ github.head_ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+
+env:
+  install_subdir: "pr-${{ github.event.pull_request.number }}"
 
 jobs:
   build:
@@ -21,39 +21,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout PR branch
+      - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Check and build doc
+        uses: ./.github/actions/docusaurus
         with:
-          node-version: lts/*
-          cache: yarn
+          base_url: "/${{ github.event.repository.name }}/${{ env.install_subdir }}/"
 
-      - name: Installation
-        run: yarn
-
-      - name: Check translations pages consistency
-        run: python3 ./scripts/check_i18n_consistency.py
-
-      - name: Build docs
-        run: |
-          echo "Using baseUrl=$BASE_URL"
-          yarn build
-        env:
-          BASE_URL: /${{ github.event.repository.name }}/
-
-      - name: Move built docs to PR-specific folder
-        run: |
-          mkdir -p pr-${{ github.event.pull_request.number }}
-          mv build/* pr-${{ github.event.pull_request.number }}/
-
-      - name: Upload artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v3
+      - name: Archive the docs
+        uses: actions/upload-artifact@v4
         with:
-          path: pr-${{ github.event.pull_request.number }}/
+          name: docs
+          path: build/
 
   deploy:
     name: Deploy preview to GitHub Pages
@@ -61,10 +41,23 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: preview
-      
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - name: Download the built docs artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docs
+          path: docs
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/${{ github.event.repository.name }}/${{ env.install_subdir }}
+          destination_dir: "${{ env.install_subdir }}"
 
       - name: Comment on PR with preview link
         uses: thollander/actions-comment-pull-request@v3
@@ -74,5 +67,5 @@ jobs:
           comment-tag: gh-pages-preview
           mode: recreate
           message: |
-            ✅ Preview deployed for this PR!  
-            🌍 [View the documentation preview](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/)
+            ✅ Preview deployed for this PR!
+            🌍 [View the documentation preview](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/${{ github.event.pull_request.number }})
