--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -52,11 +52,15 @@ jobs:
           name: docs
           path: docs
 
+      - run: |
+          ls -lah .
+          ls -lah docs
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/${{ github.event.repository.name }}/${{ env.install_subdir }}
+          publish_dir: ./docs/
           destination_dir: "${{ env.install_subdir }}"
 
       - name: Comment on PR with preview link
