--- a/.github/actions/docusaurus/action.yml
+++ b/.github/actions/docusaurus/action.yml
@@ -23,6 +23,7 @@ runs:
     run: yarn
 
   - name: Install perl dependencies (for po4a)
+    shell: bash
     run: sudo apt intall libyaml-tiny-perl -y
 
   - name: Check image paths consistency
