--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-all-translations": "scripts/write_all_translations.sh",
+    "update-ui-translations": "scripts/update_ui_translations.sh",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
